Updating pipeline: pl_ingesta_appearances

--- a/pipeline/pl_ingesta_appearances.json
+++ b/pipeline/pl_ingesta_appearances.json
@@ -75,7 +75,7 @@
 								"type": "Expression"
 							},
 							"Filename": {
-								"value": "@pipeline().parameters.FileName",
+								"value": "@concat(variables('tabla'),'.parquet')",
 								"type": "Expression"
 							},
 							"Filesystem": {
